src/objects/EloquaPassThroughFields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This contains the list of fields that should be pushed down to the Child Lead or Open Opportunity when a Parent Lead is updated by Eloqua.</description>
    <fields>
        <fullName>Destination_Field_API_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Destination Field API Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_API_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent API Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <label>Eloqua Pass Through Fields</label>
</CustomObject>